--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,10 @@ dependencies {
 	}
 	testImplementation('org.junit.jupiter:junit-jupiter-api:5.3.1')
 	testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.3.1')
+	testRuntimeOnly ('org.junit.vintage:junit-vintage-engine:5.3.1')
 	testImplementation('org.springframework.security:spring-security-test:5.2.0.RELEASE')
+	testImplementation('io.projectreactor:reactor-test:3.1.0.RELEASE')
+
 }
 
 test {
